--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.8",
     "clsx": "^1.2.1",
-    "next": "12.2.3",
+    "next": "^14.2.2",
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
